--- a/bookmark_manager/app/views/index.erb
+++ b/bookmark_manager/app/views/index.erb
@@ -1,3 +1,5 @@
-<h1>foo.com</h1>
-<h1>bar.net</h1>
-<h1>moo.org</h1>
+<ul>
+  <% @bookmarks.each do |bookmark| %>
+    <li><%= bookmark %></li>
+  <% end %>
+</ul>
