Added Title column to table and wrote tests to check it exists

--- a/bookmark_manager/app/views/new_bookmark.erb
+++ b/bookmark_manager/app/views/new_bookmark.erb
@@ -1,5 +1,8 @@
 <h1>Enter new bookmark URL</h1>
 <form action="/bookmarks" method="post">
+Title
+  <input type="text" name="title"/>
+  Url
   <input type="text" name="url"/>
   <input type="submit" value="Submit"/>
 </form>
