Added functionality for using instances of Bookmark to store rows - passing the tests

--- a/bookmark_manager/app/views/index.erb
+++ b/bookmark_manager/app/views/index.erb
@@ -1,5 +1,6 @@
 <ul>
  <% @bookmarks.each do |bookmark| %>
-   <li><%= bookmark %></li>
+   <li><%= bookmark.title %></li>
+   <a href="<%= bookmark.url %>"><%= bookmark.title %></a>
  <% end %>
 </ul>
